--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,27 @@
 name: alarm
-description: A new Flutter project.
-publish_to: 'none'
-version: 0.1.0
+description: Alarm project.
+publish_to: "none"
+version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: ">=3.1.3 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  floor: ^1.4.2
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
+  get_it: ^7.6.4
+  intl: ^0.18.1
+  go_router: ^12.1.1
+  equatable: ^2.0.5
+
+  just_audio: ^0.9.36
+  flutter_svg: ^2.0.9
+  mocktail: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -16,4 +29,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
+  generate: true
   uses-material-design: true
+  assets:
+    - assets/
